crates/strider-analyze/tests/snapshots/aarch64be__abi__tail_caller.snap
---
source: crates/strider/tests/v1_baseline.rs
expression: snapshot_body
---
digraph "G" {
  graph [
    rankdir=TB,
    bgcolor="#1e1e1e",
    fontcolor=white,
  ];

  node [
    shape=box,
    style="filled,rounded",
    fillcolor="#2d2d2d",
    color="#888888",
    fontcolor=white,
    fontname=monospace,
    margin=0.2,
  ];

  edge [
    color="#aaaaaa",
    fontcolor=white,
    penwidth=1.2,
  ];

  "0" [label="Entry", shape=Mdiamond, fillcolor="#1a3a5c"];
  "1" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "0" -> "1" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "2" -> "1" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "3" -> "1" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "3" [label="const 0x210178:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "4" -> "1" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "5" -> "1" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "4" -> "1" [color="#ff8800", label=arg2, fontcolor="#cccccc", fontsize=9];
  "5" -> "1" [color="#ff8800", label=arg3, fontcolor="#cccccc", fontsize=9];
  "4" -> "1" [color="#ff8800", label=arg4, fontcolor="#cccccc", fontsize=9];
  "5" -> "1" [color="#ff8800", label=arg5, fontcolor="#cccccc", fontsize=9];
  "6" -> "1" [color="#ff8800", label=arg6, fontcolor="#cccccc", fontsize=9];
  "7" -> "1" [color="#ff8800", label=arg7, fontcolor="#cccccc", fontsize=9];
  "8" -> "1" [color="#ff8800", label=arg8, fontcolor="#cccccc", fontsize=9];
  "9" [label="Return", shape=doublecircle, fillcolor="#103a10"];
  "1" -> "9" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "1" -> "9" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v10" [label="Post Call\nx0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "1" -> "v10" [color="#888888", style=dashed];
  "v10" -> "9" [color="#88cc88", label=x0, fontcolor="#cccccc", fontsize=9];
  "v11" [label="Post Call\nx1", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "1" -> "v11" [color="#888888", style=dashed];
  "v11" -> "9" [color="#88cc88", label=x1, fontcolor="#cccccc", fontsize=9];
  "v12" [label="Post Call\nq0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "1" -> "v12" [color="#888888", style=dashed];
  "v12" -> "9" [color="#88cc88", label=q0, fontcolor="#cccccc", fontsize=9];
  "v13" [label="Post Call\nq1", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "1" -> "v13" [color="#888888", style=dashed];
  "v13" -> "9" [color="#88cc88", label=q1, fontcolor="#cccccc", fontsize=9];
  "8" [label="Truncate\nu64 → u32", shape=box, fillcolor="#2d2d2d"];
  "14" -> "8" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "14" [label="arg[1] ← x1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "7" [label="ZeroExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "8" -> "7" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "6" [label="ZeroExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "15" -> "6" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "15" [label="Truncate\nu64 → u32", shape=box, fillcolor="#2d2d2d"];
  "16" -> "15" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "16" [label="arg[0] ← x0", shape=Mdiamond, fillcolor="#1a3a5c"];
  "5" [label="ZeroExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "8" -> "5" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "4" [label="ZeroExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "15" -> "4" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "2" [label="StackStore u32\n→ ram[sp - 24]", shape=box3d, fillcolor="#20182a"];
  "17" -> "2" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v18" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v18" -> "2" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "8" -> "2" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "17" [label="StackStore u32\n→ ram[sp - 20]", shape=box3d, fillcolor="#20182a"];
  "19" -> "17" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v20" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v20" -> "17" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "15" -> "17" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "19" [label="StackStore u64\n→ ram[sp - 8]", shape=box3d, fillcolor="#20182a"];
  "21" -> "19" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v22" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v22" -> "19" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "23" -> "19" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "23" [label="init\nx30", shape=Mdiamond, fillcolor="#1a3a5c"];
  "21" [label="StackStore u64\n→ ram[sp - 16]", shape=box3d, fillcolor="#20182a"];
  "24" -> "21" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v25" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v25" -> "21" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "26" -> "21" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "26" [label="init\nx29", shape=Mdiamond, fillcolor="#1a3a5c"];
  "24" [label="InitialMemory", shape=Mdiamond, fillcolor="#1a3a5c"];
}
